[gd_scene load_steps=4 format=2]

[ext_resource path="res://ui/themes/main_theme.tres" type="Theme" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]
[ext_resource path="res://objects/VoteItemEdit.gd" type="Script" id=3]

[node name="VoteItemEdit" type="Control"]
anchor_right = 0.361
anchor_bottom = 0.5
margin_right = 0.335968
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 1 )
script = ExtResource( 3 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 3.05176e-05
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 16

[node name="TextureRect" type="TextureRect" parent="VBoxContainer"]
margin_right = 370.0
margin_bottom = 242.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 2 )
expand = true
stretch_mode = 6

[node name="NameEdit" type="LineEdit" parent="VBoxContainer"]
visible = false
margin_top = 202.0
margin_right = 370.0
margin_bottom = 248.0
size_flags_horizontal = 3
align = 1
placeholder_text = "Vote Item Name"

[node name="NameButton" type="Button" parent="VBoxContainer"]
margin_top = 258.0
margin_right = 370.0
margin_bottom = 300.0
text = "Vote Item Name"

[node name="BtRemove" type="Button" parent="."]
margin_right = 42.0
margin_bottom = 42.0
text = "X"

[node name="BtLoadImage" type="Button" parent="."]
margin_top = 42.0
margin_right = 62.0
margin_bottom = 84.0
text = "img"

[node name="FileDialog" type="FileDialog" parent="."]
margin_left = 82.0
margin_top = 54.0
margin_right = 917.0
margin_bottom = 550.0
window_title = "Open a File"
resizable = true
mode = 0
access = 2

[connection signal="focus_exited" from="VBoxContainer/NameEdit" to="." method="_on_NameEdit_text_entered" binds= [ "" ]]
[connection signal="text_entered" from="VBoxContainer/NameEdit" to="." method="_on_NameEdit_text_entered"]
[connection signal="pressed" from="VBoxContainer/NameButton" to="." method="_on_NameButton_pressed"]
[connection signal="pressed" from="BtRemove" to="." method="_on_BtRemove_pressed"]
[connection signal="pressed" from="BtLoadImage" to="." method="_on_BtLoadImage_pressed"]
[connection signal="file_selected" from="FileDialog" to="." method="_on_FileDialog_file_selected"]
